# ClinicFastApi

./: README.md  docker-compose.yaml  pyproject.toml
src/: __init__.py  alembic.ini  database.py  main.py
src/admin/: dependecies.py  panel.py
src/building/: models.py  router.py  schemas.py
src/clinic/: models.py  router.py  schemas.py
src/department/: models.py  router.py  schemas.py
src/doctors/: models.py  router.py  schemas.py
src/hospital_room/: models.py  router.py  schemas.py
src/migration/: env.py
src/migration/versions/: 2024_04_26_2339-ea1469c26c98_.py  2024_04_30_2307-d53278f002d8_.py  2024_05_24_2335-84f3e590d125_.py  2024_05_28_2128-b5d32e367336_.py  2024_05_28_2133-8ea6dadc177e_.py  2024_05_28_2139-f85d51acff19_.py  2024_05_28_2229-50c8aa793d51_.py  2024_06_03_2321-42afc15b330e_.py  2024_06_03_2323-b6fac4cd1ffc_.py  2024_06_14_2349-62a8d40d2c68_.py  2024_06_18_2256-6523278fa0ae_.py  2024_06_20_1556-1ef9e228e1c1_.py  2024_06_20_2338-951ca93bd571_.py  2024_06_21_0007-14a732d9582a_.py  2024_06_21_0008-1880f00e2370_.py  2024_06_21_0012-08a99134580a_.py  2024_06_21_0034-1e71bcaf729c_.py  2024_06_21_0103-ca7d9b8f7d87_.py  2024_06_21_1021-479be9c9c314_.py  2024_06_21_1037-66f618f88d05_.py  2024_06_21_1047-37ee6d1b3007_.py  2024_06_21_1048-a40707c25846_.py  2024_06_21_1100-fb0712f0ca43_.py  2024_06_21_1108-94918c6e4780_.py  2024_06_21_1217-76e33bb47f5e_.py  (+49 more)
src/patients/: models.py  router.py  schemas.py
src/personnel/: models.py  router.py  schemas.py
src/position/: models.py  router.py  schemas.py
src/users/: models.py  router.py  schemas.py
