[tool.poetry]
name = "clinicfastapi"
version = "0.1.0"
description = ""
authors = ["alex <dr.p163@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
SQLAlchemy = "^2.0.29"
alembic = "^1.13.1"
uvicorn = "^0.29.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
sqladmin = {extras = ["full"], version = "^0.17.0"}

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
